# Google_ADK_Learning

./: .gitignore  README.md  pyproject.toml  test_output.txt
adk_advanced_tools/: agent.py  demo.db
adk_advanced_tools/data/: note.txt
adk_project/: callback_logging 2.py  callback_logging.py
adk_project/app_agent/: __init__.py  agent.py
adk_project/crewai_tool_agent/: agent.py
adk_project/function_tool_agent/: agent.py
adk_project/langchain_tool_agent/: agent.py
adk_project/llm_auditor/: agent.py
adk_project/my_google_search_agent/: agent.py
adk_project/vertexai_search_tool_agent/: agent.py  tools.py
docs/: quiz_ui_integration_guide.md
fastapi_adk_agent/: __init__.py  agent.py  main.py
litellm_agent/: .env  agent.py
mem_zero/: agent.py
multi_agent/: .env  agent.py
multiagent_systems/: callback_logging.py
multiagent_systems/parent_and_subagents/: agent.py
multiagent_systems/workflow_agents/: agent.py
my_agent/: agent.py
python/agents/bidi-demo/: README.md
python/agents/brand-search-optimization/: README.md  env.example
python/agents/data-engineering/: .env.example  README.md
python/agents/data-science/: .env.example  main.py
python/agents/fomc-research/: .env-example
python/agents/image-scoring/: .env.example
python/agents/llm-auditor/: README.md
python/agents/safety-plugins/: .env.example  (+1 more)
session_state_agent/: database_session.py  memory_session.py
session_state_qa_agent/: .env  basic_stateful_session.py
stocks/: agent.py  agent_old.py  jan15.ipynb  new_agent.py  st.html  temp_rep.py
structured_output/: agent.py
(+362 files in other folders)
